# osu-Player-Role

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  OPERATIONS.md  README.md  compose.yml
.github/workflows/: docker-images.yml
migrations/: 001_initial_schema.sql  002_osu_users.sql  003_osu_stats.sql  004_jobs.sql  005_osu_oauth_states.sql
src/: config.rs  db.rs  error.rs  main.rs  schema.rs
src/models/: condition.rs  facts.rs  mod.rs  mode.rs  rule.rs
src/routes/: admin.rs  health.rs  mod.rs  oauth.rs  plugin.rs  users.rs  verify.rs
src/services/: auth.rs  auth_gateway.rs  condition_eval.rs  csrf.rs  jobs.rs  mod.rs  osu.rs  rl_token.rs  rolelogic.rs  rule_sql.rs  rule_validator.rs  security_headers.rs  session.rs  sync.rs
src/tasks/: job_listener.rs  job_worker.rs  mod.rs  reconcile.rs  refresh.rs  shutdown.rs
templates/: oauth_done.html  role_config.html  users.html  verify.html
