[package]
name = "osu-player-role"
version = "0.1.0"
edition = "2021"
default-run = "osu-player-role"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
axum-extra = { version = "0.10", features = ["cookie", "typed-header"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "sync", "time", "signal"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "json", "uuid"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "limit", "sensitive-headers", "request-id", "compression-br", "compression-gzip", "set-header"] }
tower_governor = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
thiserror = "2"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
regex = "1"
urlencoding = "2"
bytes = "1"
uuid = { version = "1", features = ["v4", "serde"] }
governor = "0.6"
serde_urlencoded = "0.7"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
